# zk-library-example

./: Cargo.toml  README.md
first/: Cargo.toml  README.md
first/src/: cube.rs  main.rs  zero_check.rs
second/src/: main.rs
src/: main.rs
