[package]
authors = ["Jay Graber <graber.jay@gmail.com>"]
description = "examples for bellman zk-SNARK library"
license = "MIT/Apache-2.0"
name = "second"
version = "0.1.0"


[dependencies]
bitvec = "1"
blake2s_simd = "1"
ff = "0.13"
group = "0.13"
pairing = { version = "0.23", optional = true }
rand_core = "0.6.4"
byteorder = "1"
subtle = "2.2.1"
bellman = "0.14.0"
sha2 = "0.10"
bls12_381 = "0.8"
rand = "0.8.5"
